upgrade pato de fondo y botones de colores con flex wrap de distri de fotos

--- a/staff/adria-arquimbau/initial-app/5 trencat/base-settings.sass
+++ b/staff/adria-arquimbau/initial-app/5 trencat/base-settings.sass
@@ -1,5 +1,5 @@
 $panel-color: gray
-$panel-back-color: rgba(211, 211, 211, 0.5)
+$panel-back-color: lightgray
     
 $alert-color: skyblue
 $alert-back-color: rgba(135, 206, 235, 0.4)
