--- a/staff/adria-arquimbau/initial-app/5 trencat/components.sass
+++ b/staff/adria-arquimbau/initial-app/5 trencat/components.sass
@@ -6,17 +6,14 @@
     padding: 0.5rem
     margin: 1.5rem
 
-body 
-    background-image: url('https://images.thestar.com/iaCkYOTaIGCYYGnTbNeoz2ua4jY=/1200x806/smart/filters:cb(2700061000)/https://www.thestar.com/content/dam/thestar/news/queenspark/2017/05/29/ontario-tories-cry-fowl-over-120k-for-a-giant-rubber-duck/giant-duck.jpg')
-    background-size: cover
-
 .panel
     @extend %base-panel
 
     +round-border(0.1rem, 1rem, solid, $panel-color)
     
     background-color: $panel-back-color
-    
+    font-family: $font-initial-app
+
     &--show
         display: block
     
@@ -27,16 +24,16 @@ body
         color: red
 
     &__button
-        background-color: rgb(255, 210, 8)
+        background-color: skyblue
         border: none
         border-radius: 0.5rem
-        color: black
-        padding: 4px 15px
+        color: white
+        padding: 15px 32px
         text-align: center
         text-decoration: none
         display: inline-block
-        font-size: 12px
-        margin: 2px 2px
+        font-size: 16px
+        margin: 4px 2px
         cursor: pointer
 
 .alert
