search input-Ducks

--- a/staff/manuel-barzi/initial-app/5/style.css
+++ b/staff/manuel-barzi/initial-app/5/style.css
@@ -82,5 +82,9 @@
   background-color: red;
   color: white;
 }
+.duckShow{
+  display: grid;
+  grid-auto-columns: 0rem;
+}
 
 /*# sourceMappingURL=style.css.map */
