--- a/staff/felipe-fernandez/initial-app/style.css
+++ b/staff/felipe-fernandez/initial-app/style.css
@@ -1,37 +1,74 @@
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
 body {
+  display: flex;
   width: 99vw;
   margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
+  color: #e17055;
 }
 
 main {
   width: 40vw;
   height: 60vh;
-  margin: 20vh auto;
-  background-color: #a6a891;
+  margin: 10vh auto;
   text-align: center;
 }
 
+h1 {
+  font-family: "Bree Serif", serif;
+  padding: 10px;
+  color: #e17055;
+}
+
+.container {
+  width: 40vw;
+  height: 20vw;
+  background-color: #D7D9DA;
+  font-family: "Source Sans Pro", sans-serif;
+  padding: 20px;
+}
+
+form {
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+a {
+  font-family: "Source Sans Pro", sans-serif;
+}
+
 input {
-  display: inline-block;
+  border-radius: 0.2rem;
+  background-color: #e8e9e9;
+  padding: 5px;
+}
+
+button {
+  background-color: #dbdbdb;
+  font-size: 16px;
+  border-radius: 0.2rem;
+  margin: 0 auto;
+  display: block;
 }
 
 label {
   display: block;
 }
 
-button {
-  display: block;
-  margin: 0 auto;
-}
-
 .panel {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 18px;
-  display: inline-block;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 22px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 .panel--show {
   display: flex;
@@ -46,13 +83,27 @@ button {
   display: inline-block;
   padding: 10%;
 }
+.panel__show {
+  display: flex;
+}
 
 section {
   justify-content: center;
+  flex-direction: column;
 }
 
-form {
-  justify-content: center;
+.product ul {
+  display: grid;
+  list-style: none;
+}
+
+.product img {
+  width: 30vw;
+}
+
+.product li {
+  width: 40vw;
+  height: 40vw;
 }
 
 /*# sourceMappingURL=style.css.map */
