--- a/staff/jose-ortuno/initial-app/css/sass/components.sass
+++ b/staff/jose-ortuno/initial-app/css/sass/components.sass
@@ -27,58 +27,6 @@
     &--show
         display: block
 
-.register
-    &__form
-        display: flex
-        flex-direction: column
-        justify-content: center
-    &__input
-        margin-bottom: 10px
-        padding: 10px
-        border: 1px solid $greyl
-        border-radius: 1rem
-        cursor: pointer
-        transition: 0.5s
-        &:focus
-            border: 1px solid $red
-            border-radius: 1rem
-            box-shadow: none
-            outline: 0px
-        &::placeholder
-            color: $greyl
-    &__form-submit
-        background-color: $grey
-        color: $white
-        transition: 0.5s
-        &:hover
-            opacity: 0.6
-
-.login
-    &__form
-        display: flex
-        flex-direction: column
-        justify-content: center
-    &__input
-        margin-bottom: 10px
-        padding: 10px
-        border: 1px solid $greyl
-        border-radius: 1rem
-        cursor: pointer
-        transition: 0.5s
-        &:focus
-            border: 1px solid $red
-            border-radius: 1rem
-            box-shadow: none
-            outline: 0px
-        &::placeholder
-            color: $greyl
-    &__form-submit
-        background-color: $grey
-        color: $white
-        transition: 0.5s
-        &:hover
-            opacity: 0.6
-
 .error
     background: $red
     border-radius: 1rem
@@ -86,3 +34,60 @@
     color: $white
     margin: 10px 0
     text-align: center
+
+
+.form
+    display: flex
+    flex-direction: column
+    justify-content: center
+    &__input
+        text-align: center
+        margin-bottom: 10px
+        padding: 10px
+        border: 1px solid $greyl
+        border-radius: 1rem
+        cursor: pointer
+        transition: 0.5s
+        &:focus
+            border: 1px solid $red
+            border-radius: 1rem
+            box-shadow: none
+            outline: 0px
+        &::placeholder
+            color: $greyl
+    &--submit
+        background-color: $grey
+        color: $white
+        transition: 0.5s
+        &:hover
+            opacity: 0.6
+
+.welcome
+    &__info-page
+        margin-bottom: 20px
+    &__logout
+        width: 100%
+        margin-bottom: 10px
+        padding: 10px
+        border: 1px solid $greyl
+        border-radius: 1rem
+        cursor: pointer
+        transition: 0.5s
+        background-color: $red
+        color: $white
+        transition: 0.5s
+        &:hover
+            opacity: 0.6
+.product
+    &__container
+        width: 80%
+        display: grid
+        list-style: none
+    &__element
+        width: 40vw
+        height: 40vw
+        margin-bottom: 50px
+    &__img
+        width: 100%
+        object-fit: cover
+        
