--- a/staff/jose-ortuno/initial-app/css/sass/global.sass
+++ b/staff/jose-ortuno/initial-app/css/sass/global.sass
@@ -14,11 +14,11 @@ body
     justify-content: center
     align-items: center
     
-h1
+h2, h3
     font-family: 'Lato', sans-serif
     font-size: 1.1rem
     font-weight: 400 
-h2
+h1
     font-family: 'Lobster', cursive
     font-size: 2rem
     font-weight: 400
