--- a/staff/jose-ortuno/initial-app/css/style.css
+++ b/staff/jose-ortuno/initial-app/css/style.css
@@ -15,13 +15,13 @@ body {
   align-items: center;
 }
 
-h1 {
+h2, h3 {
   font-family: "Lato", sans-serif;
   font-size: 1.1rem;
   font-weight: 400;
 }
 
-h2 {
+h1 {
   font-family: "Lobster", cursive;
   font-size: 2rem;
   font-weight: 400;
@@ -79,68 +79,6 @@ p {
   display: block;
 }
 
-.register__form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.register__input {
-  margin-bottom: 10px;
-  padding: 10px;
-  border: 1px solid #bdc3c7;
-  border-radius: 1rem;
-  cursor: pointer;
-  transition: 0.5s;
-}
-.register__input:focus {
-  border: 1px solid #e74c3c;
-  border-radius: 1rem;
-  box-shadow: none;
-  outline: 0px;
-}
-.register__input::placeholder {
-  color: #bdc3c7;
-}
-.register__form-submit {
-  background-color: #95a5a6;
-  color: #ecf0f1;
-  transition: 0.5s;
-}
-.register__form-submit:hover {
-  opacity: 0.6;
-}
-
-.login__form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.login__input {
-  margin-bottom: 10px;
-  padding: 10px;
-  border: 1px solid #bdc3c7;
-  border-radius: 1rem;
-  cursor: pointer;
-  transition: 0.5s;
-}
-.login__input:focus {
-  border: 1px solid #e74c3c;
-  border-radius: 1rem;
-  box-shadow: none;
-  outline: 0px;
-}
-.login__input::placeholder {
-  color: #bdc3c7;
-}
-.login__form-submit {
-  background-color: #95a5a6;
-  color: #ecf0f1;
-  transition: 0.5s;
-}
-.login__form-submit:hover {
-  opacity: 0.6;
-}
-
 .error {
   background: #e74c3c;
   border-radius: 1rem;
@@ -148,6 +86,72 @@ p {
   color: #ecf0f1;
   margin: 10px 0;
   text-align: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.form__input {
+  text-align: center;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #bdc3c7;
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.form__input:focus {
+  border: 1px solid #e74c3c;
+  border-radius: 1rem;
+  box-shadow: none;
+  outline: 0px;
+}
+.form__input::placeholder {
+  color: #bdc3c7;
+}
+.form--submit {
+  background-color: #95a5a6;
+  color: #ecf0f1;
+  transition: 0.5s;
+}
+.form--submit:hover {
+  opacity: 0.6;
+}
+
+.welcome__info-page {
+  margin-bottom: 20px;
+}
+.welcome__logout {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #bdc3c7;
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: 0.5s;
+  background-color: #e74c3c;
+  color: #ecf0f1;
+  transition: 0.5s;
+}
+.welcome__logout:hover {
+  opacity: 0.6;
+}
+
+.product__container {
+  width: 80%;
+  display: grid;
+  list-style: none;
+}
+.product__element {
+  width: 40vw;
+  height: 40vw;
+  margin-bottom: 50px;
+}
+.product__img {
+  width: 100%;
+  object-fit: cover;
 }
 
 /*# sourceMappingURL=style.css.map */
