add components custom

--- a/staff/jaume-villarreal/initial-app/css/gallery.sass
+++ b/staff/jaume-villarreal/initial-app/css/gallery.sass
@@ -5,19 +5,16 @@
     flex-wrap: wrap
     justify-content: center
     color: #1DA5F3
-    &__img
-        width: 100%
+    >li
+        width: 40%
         display: flex
-        flex-wrap: wrap
-        justify-content: space-evenly
-        >div
-            display: flex
-            flex-direction: column
-            justify-content: center
-            align-items: center
-            width: 40%
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        height: auto
+        margin: .25rem
+        padding: .25rem
+        >img
+            width: 100%
             height: auto
-            margin: .25rem
-            padding: .25rem
-            >img
-                width: 100%
+            
