--- a/staff/jaume-villarreal/initial-app/css/style.css
+++ b/staff/jaume-villarreal/initial-app/css/style.css
@@ -150,24 +150,19 @@ body {
   justify-content: center;
   color: #1DA5F3;
 }
-.gallery__img {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-.gallery__img > div {
+.gallery > li {
+  width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 40%;
   height: auto;
   margin: 0.25rem;
   padding: 0.25rem;
 }
-.gallery__img > div > img {
+.gallery > li > img {
   width: 100%;
+  height: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
