--- a/staff/carolina-zhou/initial-app/components.sass
+++ b/staff/carolina-zhou/initial-app/components.sass
@@ -1,24 +1,57 @@
 /* --- Initial App --- */
 
-body
+@mixin header-footer-style
+    background-color: $primary-bg-color
+    color: $secondary-text-color
+    padding: 15px
+    text-align: center
+
+@mixin main-content-box 
+    background-color: $secondary-bg-color
+    color: $primary-text-color
+    margin: 3em auto auto auto
+    padding: 30px
+    width: 70%
+
+@mixin text-input
+    width: 95%
+    margin-top: .5em
+    border: 1px solid $border-color
+    border-radius: 10px
+    outline: none
+    padding: 15px 
+    font-size: 18px
+
+@mixin button
+    background-color: #fff000
+    color: $other-text-color
+    border: none
+    padding: 15px
+    font-size: 18px
+
+.body
+    background-image: url("https://cdn.pixabay.com/photo/2016/02/11/14/59/fruits-1193727_960_720.png")
+    background-repeat: repeat
+    background-size: contain
     box-sizing: border-box
     margin: auto
     font-family: sans-serif
     font-size: 22px
-    background-image: url("https://cdn.pixabay.com/photo/2016/02/11/14/59/fruits-1193727_960_720.png")
-    background-repeat: no-repeat
-    background-size: cover
+    overflow: auto
+    &__header
+        @include header-footer-style
 
-.header
-    background-color: #ffc400
-    color: white
-    padding: 15px
-    text-align: center
-    font-size: 48px
-    font-weight: bold
+        font-size: 48px
+        font-weight: bold
 
-main
-    height: 100vh
+    &__main
+        min-height: 80vh
+        margin-bottom: 5em
+
+    &__footer
+        @include header-footer-style
+        
+        margin-top: -50px
 
 .panel--show 
     display: block
@@ -27,27 +60,21 @@ main
     display: none      
 
 .intro
-    background-color: rgba(0, 128, 0, .65)
-    margin: 3em auto auto auto
-    padding: 30px
-    text-align: center
-    color: yellow
+    @include main-content-box
+
     font-size: 28px
-    max-width: 70%
+    text-align: center
     &__title
         margin: 0
         padding: 25px
 
     &__register, &__login
-        color: lightGreen
+        color: $terciary-text-color
         text-decoration: none        
 
 .register
-    background-color: rgba(0, 128, 0, .65)
-    color: yellow
-    margin: 3em auto auto auto
-    padding: 30px
-    width: 70%
+    @include main-content-box
+
     display: flex
     flex-direction: column
     &__form
@@ -58,53 +85,34 @@ main
         margin-top: 2em
 
     &__input
-        width: 95%
-        margin-top: .5em
-        border: 1px solid darkGray
-        border-radius: 10px
-        outline: none
-        padding: 10px
+        @include text-input
 
     &__button
-        border: none
-        padding: 10px
-        background-color: #fff000
-        color: green
+        @include button
+
         font-size: 22px
 
     &__back
-        color: lightGreen
+        color: $terciary-text-color
         text-decoration: none  
         text-align: right    
 
 .confirmation
-    background-color: rgba(0, 128, 0, .65)
-    color: yellow
-    margin: 3em auto auto auto
-    padding: 30px
-    width: 70%
+    @include main-content-box
+
     text-align: center
     &__input
-        width: 100%
-        margin-top: .5em
-        border: 1px solid darkGray
-        border-radius: 10px
-        outline: none
-        padding: 10px
+        @include text-input
 
     &__button
+        @mixin button
+
         margin-top: 2em
-        border: none
-        padding: 10px
         font-size: 22px
-        background-color: #fff000
 
 .login
-    background-color: rgba(0, 128, 0, .65)
-    color: yellow
-    margin: 3em auto auto auto
-    padding: 30px
-    width: 70%
+    @include main-content-box
+
     display: flex
     flex-direction: column
     &__form
@@ -115,40 +123,39 @@ main
         margin-top: 2em
 
     &__input
-        width: 95%
-        margin-top: .5em
-        border: 1px solid darkGray
-        border-radius: 10px
-        outline: none
-        padding: 10px
+        @include text-input
 
     &__button
-        color: green
-        border: none
-        padding: 10px
-        font-size: 22px
-        background-color: #fff000
+        @include button
 
     &__back
-        color: lightGreen
+        color: $terciary-text-color
         text-decoration: none  
         text-align: right    
 
 .home
-    background-color: rgba(0, 128, 0, .65)
-    color: yellow
-    margin: 3em auto auto auto
-    padding: 30px
-    width: 70%
-    text-align: center
+    @include main-content-box
+
+    text-align: center 
+    &__label
+        display: none
+
+    &__input
+        @include text-input
+        width: 80%
+        margin-bottom: 2em
+
+    &__button
+        @include button
+
     &__logout
-        color: lightGreen
+        color: $terciary-text-color
         text-decoration: none  
-        text-align: right 
+        text-align: right
 
 .error
-    background-color: rgba(100, 0, 0, .65)
-    color: white
+    background-color: $terciary-bg-color
+    color: $secondary-text-color
     width: 70%
     margin: 1em auto auto auto
     padding: 30px
@@ -156,9 +163,22 @@ main
         font-weight: bold
         font-size: 22px
 
-.footer
-    background-color: #ffc400
-    color: white
-    margin-top: 2em
-    padding: 15px
-    text-align: center
+.search
+    @include main-content-box
+    width: 80vw
+
+    &__list
+        color: $primary-text-color
+        font-size: 16px
+        display: grid
+        grid-template-columns: 1fr 1fr
+        align-items: center
+        justify-items: center
+
+    &__item
+        list-style: none
+        margin: 2em
+        padding: 10px
+    
+    &__image
+        max-width: 80%
