--- a/staff/sylvain-legrill/mucho-layout/all/style.css
+++ b/staff/sylvain-legrill/mucho-layout/all/style.css
@@ -4,6 +4,7 @@ html{
 }
 
 body{
+    
     display: flex;
     flex-flow: column wrap;
     background-color: rgb(255,255,255);
@@ -12,13 +13,14 @@ body{
     font-weight: normal;
     line-height: 1.5;
     font-size: 20px;
+    
 }
 
 
 
 header{
     background-color: rgb(255,255,255); 
-    padding: 14px 16px;  
+    padding: 14px 10px;  
     color: #AEAEAE;
     
 }
@@ -30,16 +32,22 @@ header{
  }
 
 .header__logoimg{
+    padding: 1rem;
     width: 85px;
 }
 
 .header__presentation{
     display: none;
+    font-size: 16px;
 }
 
-.header__navigator{
+ .header__navigator{
     display: none;
-  }
+    font-size: 16px;
+    
+  } 
+
+
     
 .header__navproject{
     line-height: 1.3;
@@ -55,18 +63,17 @@ header{
 }
 
 
-main{
+.main{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 
 }
 
- .main__imagecontainer img{
+.main__imagecontainer img{
     width: 100%;
-    padding-top: 3px;
 
-} 
+}
 
 .main__imagecontainer img:hover{
     opacity: 0.05;
@@ -123,7 +130,8 @@ main{
 
 }
 
-/* +++++++++++++ MEDIA QUERIES */
+
+/* +++++++++++++ ///////////////////////MEDIA QUERIES */
 
 
 @media(min-width: 700px) and (max-width: 1124px){
@@ -154,16 +162,29 @@ main{
     }
     
     
-    .header__navigator--menulist{
-        
+    .header__navigator{
         display: flex;
+        
+        
+
     }
     
-    .header__navigator--menulist li {
+    .header__navigator--menulist{
     
-    font-size: 14px;
-    padding: 2%;
-    list-style-type: none;  }
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-flow: row nowrap;    
+        font-size: 14px;
+        padding: 2%;
+        list-style-type: none;  }
+
+    .menulist__li{
+        padding: 0.3rem;
+
+        
+        } 
     
         
     .header__navproject{
@@ -188,22 +209,25 @@ main{
     }
     
     .main{
-        margin-left: 1%;
-        margin-right: 1%;
+        margin-left: 0.4%;
+        margin-right: 0.1%;
             
     }
     
     .main__imagecontainer {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        /* justify-content: space-between; */
         flex-direction: row;
         
       }
     .main__imagecontainer img{
-        align-content: stretch;
+        align-content: space-around;
         width: 49.8%;
         height: 49.8%;
+        padding: 0 0 2px 1px;
+        
+
     
     }
     
@@ -251,10 +275,12 @@ main{
     
         justify-items: start;
         grid-column-start: 1 / span 2;
-        font-size: 26px;
-        padding-top:100px;
+        padding-top:60px;
         color:#555555;
+        font-size: 26px;
     }
+
+    
     
     
     .footer__addresses{
@@ -341,23 +367,29 @@ main{
         width:40%;
     }
     
+
     
-    .header__nav{
+    .header__navigator{
         display: flex;
-        justify-content:space-between; 
-        align-content: flex-start;
-     }
-    
-    .header__navigator--menulist{
-        
-        display: flex;
+
+
     }
     
-    .header__navigator--menulist  li {
+    .header__navigator--menulist{
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+        flex-flow: row nowrap;
     
+        padding: 2%;
+        list-style-type: none;  }
+
+    .menulist__li{
+        padding: 0.3rem;
     
-    padding: 2%;
-    list-style-type: none;  }
+            
+        } 
     
         
     .header__navproject{
@@ -386,16 +418,16 @@ main{
     
     
     .main{
-       margin-left: 1%;
-       margin-right: 1%;
+        margin-left: 0.5%;
+        margin-right: 0.5%;
         
     }
     
-     .main__imagecontainer {
+    .main__imagecontainer {
         display: grid;
         grid-template-columns: repeat( 3 , 1fr);
         grid-template-rows: repeat(11, 1fr);
-        grid-gap: 3px;
+        grid-gap: 4px;
         grid-auto-flow: dense;
         justify-items: stretch;
         align-items: stretch;
@@ -477,10 +509,9 @@ main{
        
         display: grid;
         grid-template-columns: repeat(2 , 1fr);
-        font-size: 22px;
+        font-size: 26px;
         padding-top:100px;
         color:#555555;
-        font-size: 20px;
     }
     
     .footer__addresses{
