--- a/staff/carolina-zhou/initial-app/style/base-settings.sass
+++ b/staff/carolina-zhou/initial-app/style/base-settings.sass
@@ -10,4 +10,4 @@ $primary-text-color: black
 $secondary-text-color: white
 
 $link-text-color: grey
-$hover-text-color: pink
+$hover-text-color: deeppink
