--- a/staff/carolina-zhou/initial-app/components/custom/duck-results.sass
+++ b/staff/carolina-zhou/initial-app/components/custom/duck-results.sass
@@ -16,7 +16,27 @@
     &__item
         margin: 2em
         padding: 10px
+        display: flex
+        flex-direction: column
+        align-items: center
     
     &__image
-        max-width: 80%
+        max-width: 300px
         border-radius: 2em
+
+    &__favorites
+        background-color: grey
+        color: white
+        border: none
+        border-radius: 10px
+        padding: 10px
+        font-size: 16px
+        margin-top: 1em
+        max-width: 70%
+
+    &__favorites:hover
+        background-color: $hover-text-color
+
+    &__favorites:active
+        background-color: black
+        color: white
