--- a/staff/albert-fuente/initial-app-ES6/9/components/custom/duck-home.sass
+++ b/staff/albert-fuente/initial-app-ES6/9/components/custom/duck-home.sass
@@ -2,3 +2,7 @@
     @extend %panel
 
     background-color: greenyellow
+    
+.mainGrid
+    display: grid
+    grid-template-areas: "results search" "results fav"
