--- a/staff/albert-fuente/initial-app-ES6/9/style/index.sass
+++ b/staff/albert-fuente/initial-app-ES6/9/style/index.sass
@@ -11,11 +11,19 @@
 @import ../components/custom/duck-home
 @import ../components/custom/duck-results
 @import ../components/custom/duck-detail
-
+@import ../components/custom/duck-favorite
 
 body
     font-family: cursive
-    background: #f8f8f8
+    background-image: url("https://images.pexels.com/photos/226597/pexels-photo-226597.jpeg?cs=srgb&dl=bath-ducks-bathroom-bathtub-226597.jpg&fm=jpg")
+    background-attachment: fixed
+    background-size: cover
+    background-position: center 
+    font-family: 'Farro', sans-serif
+    background-color: black
+    height: 100vh
 h1
     font-size: 3rem
     text-align: center
+    color: #ED091C
+
