--- a/staff/lluis-agusti/initial-app/9/style/base-settings.sass
+++ b/staff/lluis-agusti/initial-app/9/style/base-settings.sass
@@ -1,14 +1,19 @@
-$panel-color: gray
-$panel-back-color: lightgray
+$panel-color: lightgray
+$panel-back-color: #ececec
+$app-font: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif
+$font-color: grey
     
-$alert-color: skyblue
-$alert-back-color: rgba(135, 206, 235, 0.4)
+$alert-color: #41b3a3
+$alert-back-color: rgb(135, 206, 235, 0.4)
 $alert-title-color: rgb(0, 115, 255)
 
-$alert-warn-color: tomato
+$alert-warn-color: #E27D60
 $alert-warn-title-color: rgb(255, 65, 31)
-$alert-warn-back-color: rgba(255, 99, 71, 0.283)
+$alert-warn-back-color: rgb(255, 99, 71)
 
-$confirm-color: plum
+$confirm-color: lightgray
 $confirm-back-color: #ffcccc
 $confirm-title-color: violet
+
+body 
+    font-family: $app-font
