--- a/staff/jaume-villarreal/initial-app/js6/components/custom/duck-detail.sass
+++ b/staff/jaume-villarreal/initial-app/js6/components/custom/duck-detail.sass
@@ -1,11 +1,9 @@
 .duck-detail
-    @extend %panel
-
-    background-color: plum
-
-    &__photo
-        width: 333px
-
-    &__price
-        background-color: yellow
-        color: red
+    width: 100%
+    box-shadow: none
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    >img
+        width: 50%
+        height: auto
