--- a/staff/jaume-villarreal/initial-app/js6/components/feedback.sass
+++ b/staff/jaume-villarreal/initial-app/js6/components/feedback.sass
@@ -1,12 +1,11 @@
 .feedback
-    @extend %panel
-
-    &--success
-        background-color: greenyellow
-
-    &--warning
-        background-color: yellow
-
-    &--error
-        background-color: red
-        color: white
+    width: 65%
+    background-color: #cc330088
+    border-left: 1rem solid #cc3300
+    border-radius: .5rem
+    margin: 0 0 .25rem
+    padding: .5rem .5rem .5rem 1rem
+    font-size: 1.1rem
+    text-align: left
+    color: #990000 
+    
