--- a/staff/jaume-villarreal/initial-app/js6/components/landing.sass
+++ b/staff/jaume-villarreal/initial-app/js6/components/landing.sass
@@ -1,4 +1,7 @@
 .landing
     @extend %panel
-
-    background-color: yellow
+    // display: flex
+    // flex-direction: column
+    justify-content: center
+    align-items: center
+    
