--- a/staff/jaume-villarreal/initial-app/js6/components/login.sass
+++ b/staff/jaume-villarreal/initial-app/js6/components/login.sass
@@ -1,4 +1,5 @@
 .login
     @extend %panel
-
-    background-color: orange
+    flex-direction: column
+    justify-content: center
+    align-items: center
