--- a/staff/jaume-villarreal/initial-app/js6/components/register-success.sass
+++ b/staff/jaume-villarreal/initial-app/js6/components/register-success.sass
@@ -1,4 +1,5 @@
 .register-success
     @extend %panel
-
-    background-color: salmon
+    flex-direction: column
+    justify-content: center
+    align-items: center
