--- a/staff/jaume-villarreal/initial-app/js6/components/register.sass
+++ b/staff/jaume-villarreal/initial-app/js6/components/register.sass
@@ -1,4 +1,5 @@
 .register
     @extend %panel
-
-    background-color: gold
+    flex-direction: column
+    justify-content: center
+    align-items: center
