--- a/staff/jaume-villarreal/initial-app/js6/style/index.sass
+++ b/staff/jaume-villarreal/initial-app/js6/style/index.sass
@@ -1,5 +1,6 @@
 @import base-settings
-@import ../utils/round-border
+@import ../utils/button
+@import ../utils/form
 @import ../components/component
 @import ../components/panel
 @import ../components/landing
@@ -8,6 +9,7 @@
 @import ../components/register-success
 @import ../components/feedback
 @import ../components/search
+@import ../components/results
 @import ../components/custom/duck-home
 @import ../components/custom/duck-results
 @import ../components/custom/duck-detail
