--- a/staff/jaume-villarreal/initial-app/js6/components/custom/duck-home.sass
+++ b/staff/jaume-villarreal/initial-app/js6/components/custom/duck-home.sass
@@ -1,4 +1,5 @@
 .duck-home
     @extend %panel
-
-    background-color: greenyellow
+    flex-direction: column
+    justify-content: center
+    align-items: center
