--- a/staff/jaume-villarreal/initial-app/js6/components/panel.sass
+++ b/staff/jaume-villarreal/initial-app/js6/components/panel.sass
@@ -1,11 +1,10 @@
 %panel
-    padding: 0.5rem
-    margin: 1.5rem
-
-    +round-border(0.1rem, 1rem, solid, $panel-color)
-    
-    background-color: $panel-back-color
-
-    &__feedback
-        color: red
-
+    border: 1px solid #c9c9c9
+    width: 85%
+    min-height: 50vh
+    margin: 1rem auto
+    padding: 0.5rem 3rem
+    border-radius: 1rem
+    -webkit-box-shadow: 0px 5px 8px 1px rgba(0, 0, 0, 0.25)
+    -moz-box-shadow: 0px 5px 8px 1px rgba(0, 0, 0, 0.25)
+    box-shadow: 0px 5px 8px 1px rgba(0, 0, 0, 0.25)
