--- a/staff/jaume-villarreal/initial-app/js6/style/base-settings.sass
+++ b/staff/jaume-villarreal/initial-app/js6/style/base-settings.sass
@@ -1,14 +1,15 @@
-$panel-color: gray
-$panel-back-color: lightgray
-    
-$alert-color: skyblue
-$alert-back-color: rgba(135, 206, 235, 0.4)
-$alert-title-color: rgb(0, 115, 255)
+html
+    margin: 0
+    padding: 0
+    font-size: 16px
 
-$alert-warn-color: tomato
-$alert-warn-title-color: rgb(255, 65, 31)
-$alert-warn-back-color: rgba(255, 99, 71, 0.283)
-
-$confirm-color: plum
-$confirm-back-color: #ffcccc
-$confirm-title-color: violet
+.wrapper
+    box-sizing: border-box
+    width: 50vw
+    border: 1px 
+    margin: 0 auto
+    font-family: "Darker Grotesque", sans-serif
+    font-size: 1.25rem
+    >h1
+        font-family: Play, sans-serif
+        text-align: center
