--- a/staff/adria-arquimbau/initial-app/9.2/style/index.sass
+++ b/staff/adria-arquimbau/initial-app/9.2/style/index.sass
@@ -11,3 +11,4 @@
 @import ../components/custom/duck-home
 @import ../components/custom/duck-results
 @import ../components/custom/duck-detail
+@import ../components/custom/duck-favourites
