add v.10 initial-app

--- a/staff/christian-haag/initial-app/10/styles/index.sass
+++ b/staff/christian-haag/initial-app/10/styles/index.sass
@@ -4,3 +4,11 @@
 @import ../sassfiles/sections-settings
 @import ../sassfiles/tag-settings
 @import ../sassfiles/temp
+
+@import ../components/home
+@import ../components/landing
+@import ../components/login
+@import ../components/product-panel
+@import ../components/register-success
+@import ../components/register
+
