--- a/staff/christian-haag/initial-app/10/sassfiles/tag-settings.sass
+++ b/staff/christian-haag/initial-app/10/sassfiles/tag-settings.sass
@@ -2,7 +2,9 @@
     margin: 0
     padding: 0
     box-sizing: border-box
-    
+html
+    overflow-y: hidden
+
 html, body
     width: 100%
     height: 100%
@@ -14,19 +16,22 @@ ul
     list-style: none 
     display: flex
     flex-wrap: wrap  
-    justify-content: space-around   
+    justify-content: space-around  
+    margin: 0 10px 
 
 body
     margin: 15px 0
     display: flex
-
+    overflow-y: auto
+   
 
 main
     @extend %flexProps-shared
     height: auto
-    width: 35%
+    width: 50%
     text-align: center
     margin: auto
+    
     
     
 section
@@ -39,21 +44,29 @@ a
     color: black
     
 h1
-    color: $title-color 
+    color: white
+    margin: 15px 0 25px 0
+    
 
 h3
     font-size: 0.9rem
     margin-bottom: 25px
 
-form
+.login-form, .register-form
     @extend %flexProps-shared
     margin: 10px 20px
     align-content: space-evenly
+    
  
 img
     object-fit: contain
-    width: 100%
-    
+    width: 90%
+    -webkit-box-shadow: 1px 3px 5px 0px rgba(0,0,0,0.29)
+    -moz-box-shadow: 1px 3px 5px 0px rgba(0,0,0,0.29)
+    box-shadow: 1px 3px 5px 0px rgba(0,0,0,0.29)
+
+.list-price
+    margin: 15px   
 
 li
     margin: 15px 0
