--- a/staff/christian-haag/initial-app/10/styles/index.css
+++ b/staff/christian-haag/initial-app/10/styles/index.css
@@ -6,7 +6,18 @@
   display: block;
 }
 
-form, main {
+.register, .register-success, .product-panel, .login, .landing, .home {
+  margin-top: 35px;
+  width: 100%;
+  height: auto;
+  background-color: #f5f5f5;
+  border-radius: 7px;
+  -webkit-box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.29);
+  box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.29);
+}
+
+.login-form, .register-form, main {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -16,6 +27,10 @@ form, main {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  overflow-y: hidden;
 }
 
 html, body {
@@ -31,16 +46,18 @@ ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin: 0 10px;
 }
 
 body {
   margin: 15px 0;
   display: flex;
+  overflow-y: auto;
 }
 
 main {
   height: auto;
-  width: 35%;
+  width: 50%;
   text-align: center;
   margin: auto;
 }
@@ -57,7 +74,8 @@ a {
 }
 
 h1 {
-  color: #47cf73;
+  color: white;
+  margin: 15px 0 25px 0;
 }
 
 h3 {
@@ -65,28 +83,27 @@ h3 {
   margin-bottom: 25px;
 }
 
-form {
+.login-form, .register-form {
   margin: 10px 20px;
   align-content: space-evenly;
 }
 
 img {
   object-fit: contain;
-  width: 100%;
+  width: 90%;
+  -webkit-box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.29);
+  box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.29);
+}
+
+.list-price {
+  margin: 15px;
 }
 
 li {
   margin: 15px 0;
   width: 230px;
   height: 350px;
-}
-
-.landing, .register, .register-success, .login, .home, .product-panel {
-  margin-top: 35px;
-  width: 100%;
-  height: auto;
-  background-color: #f5f5f5;
-  border-radius: 7px;
 }
 
 .text {
@@ -107,11 +124,6 @@ li {
 
 .link > a {
   margin: 0 20px;
-}
-
-.form {
-  justify-content: center;
-  border: 1px solid black;
 }
 
 .img-panel {
@@ -162,6 +174,73 @@ li {
 
 .duck-detail__photo {
   width: 50%;
+}
+
+.home-panel {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+.home-panel__greetings {
+  width: 50%;
+  margin: 15px 15px 25px 15px;
+  text-align: left;
+}
+.home-panel__greetings--title {
+  text-align: center;
+  margin: 5px;
+}
+.home-panel__form {
+  background-color: white;
+  border: 2px solid #47cf73;
+  width: auto;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  border-radius: 15px;
+  align-items: center;
+}
+.home-panel__input-box {
+  width: 40%;
+}
+.home-panel__input-box--size {
+  justify-content: center;
+}
+
+.landing {
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.login {
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.product-panel {
+  margin-bottom: 25px;
+}
+
+.duck-detail__title {
+  margin: 15px;
+}
+.duck-detail__price {
+  margin: 15px;
+  font-weight: bold;
+}
+.duck-detail__description {
+  margin: 1px 10px 15px 10px;
+  padding: 15px;
+}
+
+.register {
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 /*# sourceMappingURL=index.css.map */
